# bioloidsim

./: README.md
catkin_ws/src/typea_control/: CMakeLists.txt  package.xml
catkin_ws/src/typea_control/config/: bioloid_control.yaml
catkin_ws/src/typea_control/launch/: bioloid_control.launch
catkin_ws/src/typea_description/: CMakeLists.txt  README.md  gazebo.xacro  package.xml  std_parts.xacro  typea.gv  typea.xacro
catkin_ws/src/typea_description/config/: config.rviz
catkin_ws/src/typea_description/launch/: rviz.launch
catkin_ws/src/typea_description/scripts/: clean.sh  typea.gv  xacro2urdf.sh
catkin_ws/src/typea_gazebo/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/typea_gazebo/launch/: bioloid_gazebo.launch
catkin_ws/src/typea_gazebo/scripts/: walker_demo.py
catkin_ws/src/typea_gazebo/src/typea_gazebo/: typea.py
